--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</span>
 							</button>
 
-							<button class="btn btn-light work-btn wow slideInUp btn-hide"> HOW IT WORKS
+							<button class="btn btn-light work-btn wow slideInUp btnp-hide"> HOW IT WORKS
 								<span class="">
 									<i class="fas fa-long-arrow-alt-right ml-1"></i>
 								</span>
