--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 	<section class="test-sec overflow-hidden py-80">
 		<div class="container">
 			<div class="sec-head wow slideInLeft text-center text-lg-left mb-20">
-				<h3 class="text-primary f-700 w3-xlarge">our project</h3>
+				<h3 class="text-primary f-700 w3-xlarge">our client</h3>
 				<h2 class="text-capitalize">More Than 800+ Customer Satisfied Our Solutions</h2>
 			</div>
 
@@ -597,7 +597,7 @@
 					</div>
 				</div>
 				<div class="col-lg-7 col-12">
-					<div class="sec-head wow slideInRight text-center text-lg-left mb-20 pl-5">
+					<div class="sec-head wow slideInRight text-center text-lg-left mb-20 pl-lg-5 pl-0">
 						<h3 class="text-primary f-700 w3-xlarge">our skill</h3>
 						<h2 class="text-capitalize">More Than 25+ Years We Provide Solutions</h2>
 					</div>
