--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<!-- Header Part -->
 	<header class="header-sec overflow-hidden">
 		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg">
+			<nav class="navbar navbar-expand-lg fixed-top">
 				<a class="navbar-brand wow slideInLeft" href="index.html"> 
 					<img src="img/logo/logox.png" alt="">
 				</a>
